@@ -214,6 +214,7 @@ tmw_SOURCES = gui/widgets/resizegrip.cpp \
 	      utils/fastsqrt.h \
 	      utils/minmax.h \
 	      utils/tostring.h \
+	      utils/trim.h \
 	      utils/xml.cpp \
 	      utils/xml.h \
 	      animatedsprite.cpp \
